@startuml

title __SUFFIXTREE's Class Diagram__\n

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class Edge {
              - label : String
              + getLabel()
              + setLabel()
              + getDest()
              + setDest()
              + Edge()
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class EdgeBag {
              - chars : byte[]
              - values : Edge[]
              {static} - BSEARCH_THRESHOLD : int
              + put()
              + get()
              + get()
              - search()
              + values()
              - sortArrays()
              + isEmpty()
              + size()
              + entrySet()
              + keySet()
              + clear()
              + putAll()
              + remove()
              + containsKey()
              + containsValue()
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class GeneralizedSuffixTree {
              - last : int
              + search()
              + search()
              + searchWithCount()
              - searchNode()
              + put()
              - testAndSplit()
              - canonize()
              - update()
              ~ getRoot()
              - safeCutLastChar()
              + computeCount()
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class ResultInfo {
              + totalResults : int
              + results : Collection<Integer>
              + ResultInfo()
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class Pair {
              + Pair()
              + getFirst()
              + getSecond()
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class Node {
              - data : int[]
              - lastIdx : int
              {static} - START_SIZE : int
              {static} - INCREMENT : int
              - edges : Map<Character, Edge>
              - resultCount : int
              ~ Node()
              ~ getData()
              ~ getData()
              ~ addRef()
              - contains()
              # computeAndCacheCount()
              - computeAndCacheCountRecursive()
              + getResultCount()
              ~ addEdge()
              ~ getEdge()
              ~ getEdges()
              ~ getSuffix()
              ~ setSuffix()
              - addIndex()
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class Utils {
              {static} + normalize()
              {static} + getSubstrings()
          }
        }
      }
    }
  }
  

  Edge o-- Node : dest
  EdgeBag -up-|> Map
  GeneralizedSuffixTree o-- Node : root
  GeneralizedSuffixTree o-- Node : activeLeaf
  GeneralizedSuffixTree +-down- ResultInfo
  GeneralizedSuffixTree +-down- Pair
  Pair o-- A : first
  Pair o-- B : second
  Node o-- Node : suffix


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
